updated DG_tutorial_p1 to have a single wrapper function around the entire solver

--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -279,38 +279,18 @@
    "id": "fdf60400",
    "metadata": {},
    "source": [
-    "### Define grid parameters\n",
+    "### Set the wave speed\n",
     "\n",
-    "Next, we'll define the numerical grid by specifying the CFL number, the total number of timesteps we'll evolve the system through, the minimum and maximum $x$ values, the number of elements $N$, the cell boundaries, and the speed in the advection equation, $c$."
+    "The scalar advection equation has one parameter, namely the wave speed $c$.  For the sake of simplicitly, we have assumed $c > 0$, and we set its value below."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 142,
    "id": "41c8e762",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define CFL\n",
-    "CFL = 0.05\n",
-    "\n",
-    "#define number of timesteps, TS\n",
-    "TS = 50\n",
-    "\n",
-    "#set up grid\n",
-    "xMax = 1.\n",
-    "xMin = 0.\n",
-    "\n",
-    "#define number of elements\n",
-    "N = 25\n",
-    "\n",
-    "#define size of a cell, dx\n",
-    "dx = (xMax-xMin)/N\n",
-    "dt = CFL * dx\n",
-    "\n",
-    "#index cells from k = 0 to N; cell boundary is at (k*dx, [k+1]*dx); define array of boundaries cbound\n",
-    "cbound = [k*dx for k in range(N+1)]\n",
-    "\n",
     "#define wave speed c\n",
     "c = 1."
    ]
@@ -342,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 143,
    "id": "51336776",
    "metadata": {},
    "outputs": [],
@@ -361,13 +341,20 @@
     "def psi1P(xi):\n",
     "    return 1\n",
     "\n",
+    "#define dx\n",
+    "def dx(N):\n",
+    "    xMax = 1.\n",
+    "    xMin = 0.\n",
+    "    \n",
+    "    return (xMax-xMin)/N\n",
+    "\n",
     "#define Jacobian\n",
-    "def J():\n",
-    "    return dx\n",
+    "def J(N):\n",
+    "    return dx(N)\n",
     "\n",
     "#define x(k, xi), where k is the index of the cell\n",
-    "def x(k, xi):\n",
-    "    return k*dx + xi*dx"
+    "def x(k, xi, N):\n",
+    "    return k*dx(N) + xi*dx(N)"
    ]
   },
   {
@@ -427,18 +414,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 144,
    "id": "ee599630-584e-4f41-92a9-efd56a37c5f0",
    "metadata": {},
    "outputs": [],
    "source": [
     "#define mass matrix; since the mass matrix is just a constant, this function\n",
     "#only needs to be called once and the result should be stored for the evolution\n",
-    "def Mij():\n",
-    "    M00 = quad(lambda xi: J()*psi0(xi)*psi0(xi), 0, 1)[0]\n",
-    "    M01 = quad(lambda xi: J()*psi0(xi)*psi1(xi), 0, 1)[0]\n",
+    "def Mij(N):\n",
+    "    M00 = quad(lambda xi: J(N)*psi0(xi)*psi0(xi), 0, 1)[0]\n",
+    "    M01 = quad(lambda xi: J(N)*psi0(xi)*psi1(xi), 0, 1)[0]\n",
     "    M10 = M01\n",
-    "    M11 = quad(lambda xi: J()*psi1(xi)*psi1(xi), 0, 1)[0]\n",
+    "    M11 = quad(lambda xi: J(N)*psi1(xi)*psi1(xi), 0, 1)[0]\n",
     "    return [[M00, M01],[M10, M11]]\n",
     "\n",
     "#define stiffness matrix; again, it is constant, so we only need to evaluate this\n",
@@ -473,7 +460,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 145,
    "id": "13449a79",
    "metadata": {},
    "outputs": [
@@ -501,12 +488,16 @@
     }
    ],
    "source": [
-    "expectedMassMatrix = dx/6. * np.array([[2, 1],[1, 2]])\n",
+    "#set N = Ntemp (chosen arbitrarily) to check that the\n",
+    "#mass matrix is being computed correctly\n",
+    "Ntemp = 25\n",
+    "\n",
+    "expectedMassMatrix = dx(Ntemp)/6. * np.array([[2, 1],[1, 2]])\n",
     "print('expected mass matrix:')\n",
     "print(np.array(expectedMassMatrix))\n",
     "print()\n",
     "print('computed mass matrix:')\n",
-    "print(np.matrix(Mij()))\n",
+    "print(np.matrix(Mij(Ntemp)))\n",
     "print('\\n')\n",
     "\n",
     "expectedStiffnessMatrix = 0.5*np.array([[-1, 1],[-1, 1]])\n",
@@ -539,7 +530,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 146,
    "id": "3c131d34",
    "metadata": {},
    "outputs": [],
@@ -547,7 +538,7 @@
     "#define the right-hand side function; this takes as arguments\n",
     "#the cell index k, a coefficient vector at timestep n called a_n,\n",
     "#the inverse of the mass matrix Minv, and the stiffness matrix K\n",
-    "def RHS(k, a_n, Minv, K):\n",
+    "def RHS(k, a_n, Minv, K):   \n",
     "    return np.dot(Minv, c*np.dot(K, a_n[k])-f(k,a_n))"
    ]
   },
@@ -563,13 +554,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 147,
    "id": "5153de77-bb74-4d9b-9247-9de9779a08da",
    "metadata": {},
    "outputs": [],
    "source": [
     "#define step() function which returns a_np1 given a_n\n",
-    "def step(a_n, a_np1, Minv, K):\n",
+    "def step(a_n, a_np1, Minv, K, dt):\n",
     "    #for each element compute a at the next time level\n",
     "    for k in range(N):\n",
     "        a_np1[k] = a_n[k] + dt*RHS(k, a_n, Minv, K)\n",
@@ -579,19 +570,23 @@
     "#evolve system TS timesteps; takes in # of timesteps TS,\n",
     "#coefficient vector at initial time a_n, and empty\n",
     "#coefficient vector at advanced time a_np1\n",
-    "def evolve_TS_steps(TS, a_n, a_np1):\n",
+    "def evolve_TS_steps(TS, a_n, dt):\n",
     "    #compute mass matrix, stiffness matrix, inverse of\n",
     "    #mass matrix; do this just once per evolution,\n",
     "    #since these are all constant matrices\n",
     "    K    = Kij()\n",
-    "    M    = Mij()\n",
+    "    M    = Mij(N)\n",
     "    Minv = inv(M)\n",
     "\n",
     "    #save all data to an array called sol, starting with ID\n",
     "    sol = a_n\n",
     "    \n",
+    "    #define temporary matrix to store coefficient matrix\n",
+    "    #at advanced time level\n",
+    "    a_np1 = np.ones(np.shape(a_n))\n",
+    "    \n",
     "    for n in range(TS):\n",
-    "        a_np1 = step(a_n, a_np1, Minv, K)\n",
+    "        a_np1 = step(a_n, a_np1, Minv, K, dt)\n",
     "        #append a_np1 to sol\n",
     "        sol = np.append(sol, a_np1)\n",
     "        #copy a_np1 into a_n for next timestep\n",
@@ -614,18 +609,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 148,
    "id": "f4ff71bc-3d90-45c4-a94f-eead601cb59b",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#define a_n = solution vector at time level n; should have shape (N, 2), where\n",
-    "#N is the number of elements (i.e. we have a_0, a_1 for each element)\n",
-    "a_n = np.ones((N,2))\n",
-    "\n",
-    "#define a_np1 = solution vector at time level n+1; same shape as a_n\n",
-    "a_np1 = np.ones((N,2))\n",
-    "\n",
     "#define initial data.  Notice that for cell k, a_{0,k} = q(x_L)\n",
     "#and a_{1,k} = q(x_R)\n",
     "def q_ID(x):\n",
@@ -635,7 +623,15 @@
     "\n",
     "#compute the coefficients a_n[k] corresponding to projecting analytic ID\n",
     "#from q_ID(x) onto the basis (psi_0, psi_1)\n",
-    "def compute_ID_a(a_n):\n",
+    "def compute_ID_a(N):\n",
+    "    #define a_n = solution vector at time level n; should have shape (N, 2), where\n",
+    "    #N is the number of elements (i.e. we have a_0, a_1 for each element)\n",
+    "    a_n = np.ones((N,2))\n",
+    "\n",
+    "    #index cells from k = 0 to N; cell boundary is at \n",
+    "    #(k*dx, [k+1]*dx); define array of boundaries cbound\n",
+    "    cbound = [k*dx(N) for k in range(N+1)]\n",
+    "    \n",
     "    for k in range(N):\n",
     "        a_n[k,0] = q_ID(cbound[k])\n",
     "        a_n[k,1] = q_ID(cbound[k+1])\n",
@@ -655,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 149,
    "id": "59354886-0adb-4d29-b1f3-9cbbbf1cfbc0",
    "metadata": {},
    "outputs": [
@@ -675,22 +671,23 @@
    "source": [
     "#plot solution given coefficient vector a_n; takes an optional matplotlib\n",
     "#style string\n",
-    "def plot_soln(a_n, styleString=''):\n",
+    "def plot_soln(a_n, N, styleString=''):\n",
     "    #xi in each element\n",
     "    xi = np.linspace(0., 1, 10)\n",
     "\n",
     "    #plot approximate solution qtilde(x)\n",
     "    for k in range(N):\n",
-    "        pl.plot(x(k,xi), qt(k, xi, a_n), styleString)\n",
+    "        pl.plot(x(k,xi,N), qt(k, xi, a_n), styleString)\n",
     "\n",
-    "#compute initial data\n",
-    "a_n = compute_ID_a(a_n)\n",
+    "#compute initial data for Ntemp elements\n",
+    "Ntemp = 25\n",
+    "a_n = compute_ID_a(Ntemp)\n",
     "\n",
     "#plot initial data as a black dotted line\n",
-    "plot_soln(a_n)\n",
+    "plot_soln(a_n, Ntemp)\n",
     "\n",
     "#plot exact initial data\n",
-    "xx = np.linspace(xMin, xMax, 100)\n",
+    "xx = np.linspace(0, 1, 100)\n",
     "pl.plot(xx, q_ID(xx), 'k:')\n",
     "pl.xlabel('$x$')\n",
     "pl.ylabel('$\\\\tilde{q}(t=0, x)$')\n",
@@ -709,13 +706,38 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 150,
+   "id": "3f0c47ca",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dt(CFL, N):\n",
+    "    return CFL*dx(N)\n",
+    "\n",
+    "#define a wrapper function to set ID and solve system\n",
+    "#all at once\n",
+    "def solve_system(t_end, CFL, N):\n",
+    "    #compute number of timesteps, TS\n",
+    "    TS = int(t_end/dt(CFL, N)) + 1\n",
+    "    \n",
+    "    #compute ID and define coefficient matrix at t=0\n",
+    "    a_n = compute_ID_a(N)\n",
+    "    \n",
+    "    return evolve_TS_steps(TS, a_n, dt(CFL, N))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
    "id": "6f3c3f08",
    "metadata": {},
    "outputs": [],
    "source": [
     "#compute solution after TS timesteps\n",
-    "sol = evolve_TS_steps(TS, a_n, a_np1)"
+    "t_end = 1\n",
+    "CFL   = 0.01\n",
+    "N     = 24\n",
+    "sol = solve_system(t_end, CFL, N)"
    ]
   },
   {
@@ -732,7 +754,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 161,
    "id": "22f50813",
    "metadata": {},
    "outputs": [],
@@ -754,19 +776,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 162,
    "id": "fa83a149",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "34e2611c7ad24462978ef4d59c17b10f",
+       "model_id": "057e96edcab94cfc9e474aa5ac9aa5bb",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='timestep', max=50), Output()), _dom_classes=('widget-int…"
+       "interactive(children=(IntSlider(value=0, description='timestep', max=2401), Output()), _dom_classes=('widget-i…"
       ]
      },
      "metadata": {},
@@ -779,18 +801,20 @@
     "#the widgets.interact_manual one below it; that one only\n",
     "#draws the plot when you hit \"Run Interact\"; see\n",
     "#https://ipython-books.github.io/33-mastering-widgets-in-the-jupyter-notebook/\n",
-    "@widgets.interact(timestep=(0, TS))\n",
+    "@widgets.interact(timestep=(0, np.shape(sol)[0]-1))\n",
     "#@widgets.interact_manual(timestep=(0, TS))\n",
     "\n",
     "def plot_slider(timestep=0):\n",
     "    \n",
     "    #plot numerical solution   \n",
     "    coeffMatrix = sol[timestep]\n",
-    "    plot_soln(coeffMatrix)\n",
+    "    #define N = number of elements\n",
+    "    N = np.shape(sol)[1]\n",
+    "    plot_soln(coeffMatrix, N)\n",
     "    \n",
     "    #plot analytic solution\n",
-    "    xx = np.linspace(xMin, xMax, 100)\n",
-    "    pl.plot(xx, q_analytic(timestep*dt, xx), 'k:')\n",
+    "    xx = np.linspace(0, 1, 100)\n",
+    "    pl.plot(xx, q_analytic(timestep*dt(CFL, N), xx), 'k:')\n",
     "    \n",
     "    #decorate plot\n",
     "    pl.xlabel('$x$')\n",
