--- a/DG_tutorial_p2.ipynb
+++ b/DG_tutorial_p2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 7,
    "id": "b63fb5eb",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 8,
    "id": "ec7c16cf",
    "metadata": {},
    "outputs": [
@@ -165,41 +165,16 @@
     "\n",
     "In the cells below we follow the same general procedure as in the previous notebook, though we generalize to allow for an arbitrary number $M$ basis functions in each cell.  These basis functions are now Lagrange polynomials with interpolation points given by the roots of the Legendre polynomials.\n",
     "\n",
-    "Begin by setting up the grid, initializing the coefficient matrices, and defining roots of Legendre polynomials."
+    "Begin by fixing the wave speed.  Note that the solver assumes $c > 0$."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 9,
    "id": "2e4fce93",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set up grid\n",
-    "N = 7 #number of elements\n",
-    "M = 7 #number of modes j\n",
-    "\n",
-    "#get Legendre roots; we don't need weights\n",
-    "LegendreRoots, weights = roots_legendre(M)\n",
-    "\n",
-    "#define a_n to be a (N elements, M modes) array\n",
-    "a_n   = np.zeros((N, M))\n",
-    "a_np1 = np.zeros((N, M))\n",
-    "\n",
-    "#define CFL\n",
-    "CFL = 0.005\n",
-    "\n",
-    "#define number of timesteps, TS\n",
-    "TS = 250\n",
-    "\n",
-    "#set up grid\n",
-    "xMax = 1.\n",
-    "xMin = 0.\n",
-    "\n",
-    "#define size of a cell, dx\n",
-    "dx = (xMax-xMin)/N\n",
-    "dt = CFL * dx\n",
-    "\n",
     "#define wave speed c\n",
     "c = 1."
    ]
@@ -214,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 10,
    "id": "3d8ff9c0",
    "metadata": {},
    "outputs": [],
@@ -244,21 +219,28 @@
     "    \n",
     "    return poly\n",
     "\n",
+    "#define dx\n",
+    "def dx(N):\n",
+    "    xMax = 1.\n",
+    "    xMin = 0.\n",
+    "    \n",
+    "    return (xMax-xMin)/N\n",
+    "\n",
     "#define coordinate mapping from cell index k\n",
     "#and logical coordinate xi to global coordinate x\n",
-    "def x(k, xi):\n",
-    "    return k*dx + (1+xi)/2*dx\n",
+    "def x(k, xi, N):\n",
+    "    return k*dx(N) + (1+xi)/2*dx(N)\n",
     "\n",
     "#define Jacobian of coordinate transform dx/dxi\n",
-    "def J():\n",
-    "    return dx/2\n",
+    "def J(N):\n",
+    "    return dx(N)/2\n",
     "\n",
     "#compute mass matrix:\n",
     "def Mij(nodes):\n",
     "    order = len(nodes)\n",
     "    \n",
     "    #define jacobian\n",
-    "    jacobian = J()\n",
+    "    jacobian = J(N)\n",
     "    \n",
     "    M = np.zeros((order, order))\n",
     "    for i in range(order):\n",
@@ -334,7 +316,7 @@
     "    return np.dot(Minv, c*np.dot(K, a_n[k])-f(k, a_n, nodes))\n",
     "\n",
     "#define evolve() function which returns a_np1 given a_n\n",
-    "def evolve(a_n, a_np1, Minv, K, nodes):\n",
+    "def evolve(dt, a_n, a_np1, Minv, K, nodes):\n",
     "    N, M = np.shape(a_n)\n",
     "    \n",
     "    #for each element compute a at the next time level\n",
@@ -346,7 +328,7 @@
     "#evolve system TS timesteps; takes in # of timesteps TS,\n",
     "#coefficient vector at initial time a_n, and empty\n",
     "#coefficient vector at advanced time a_np1\n",
-    "def evolve_TS_steps(TS, a_n, a_np1, nodes):\n",
+    "def evolve_TS_steps(TS, dt, a_n, nodes):\n",
     "    #compute mass matrix, stiffness matrix, inverse of\n",
     "    #mass matrix; do this just once per evolution,\n",
     "    #since these are all constant matrices\n",
@@ -354,14 +336,18 @@
     "    M    = Mij(nodes)\n",
     "    Minv = inv(M)\n",
     "\n",
-    "    #get N (# elements) and M (polynomial order)\n",
-    "    N, M = np.shape(a_n)\n",
+    "    #get N (# elements) and order (polynomial order)\n",
+    "    N, order = np.shape(a_n)\n",
     "    \n",
     "    #save all data to an array called sol, starting with ID\n",
     "    sol = a_n\n",
     "    \n",
+    "    #define temporary matrix to store coefficient matrix\n",
+    "    #at advanced time level\n",
+    "    a_np1 = np.ones(np.shape(a_n))\n",
+    "    \n",
     "    for n in range(TS):\n",
-    "        a_np1 = evolve(a_n, a_np1, Minv, K, nodes)\n",
+    "        a_np1 = evolve(dt, a_n, a_np1, Minv, K, nodes)\n",
     "        #append a_np1 to sol\n",
     "        sol = np.append(sol, a_np1)\n",
     "        #copy a_np1 into a_n for next timestep\n",
@@ -369,7 +355,7 @@
     "\n",
     "    #reshape sol to be (TS, N, M), so sol[n] = a_n \n",
     "    #at time level n\n",
-    "    return np.reshape(sol, (TS+1, N, M))"
+    "    return np.reshape(sol, (TS+1, N, order))"
    ]
   },
   {
@@ -382,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 11,
    "id": "d2146aaf",
    "metadata": {},
    "outputs": [],
@@ -394,13 +380,16 @@
     "    return np.exp(-(x-mu)**2./sigma**2.)\n",
     "\n",
     "#populate coefficient matrix a_n with values corresponding to ID\n",
-    "def compute_ID_a(a_n, nodes):\n",
-    "    N, M = np.shape(a_n)\n",
+    "def compute_ID_a(N, nodes):\n",
+    "    order = len(nodes)\n",
+    "    \n",
+    "    #define coefficient matrix a_n\n",
+    "    a_n = np.zeros((N, order))\n",
     "    \n",
     "    for k in range(N):\n",
-    "        for j in range(M):\n",
+    "        for j in range(order):\n",
     "            xi        = nodes[j]\n",
-    "            a_n[k, j] = q_ID(x(k, xi))\n",
+    "            a_n[k, j] = q_ID(x(k, xi, N))\n",
     "            \n",
     "    return a_n"
    ]
@@ -415,19 +404,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 12,
    "id": "b67aeb44",
    "metadata": {},
    "outputs": [],
    "source": [
     "#plot q(x) given a_n and nodes\n",
-    "def plot_soln(a_n, nodes, StyleString=''):\n",
+    "def plot_soln(N, a_n, nodes, StyleString=''):\n",
     "    #xi in each element\n",
     "    xi = np.linspace(-1, 1, 100)\n",
     "\n",
     "    #plot approximate solution qtilde(x)\n",
     "    for k in range(N):\n",
-    "        pl.plot(x(k,xi), qt(k, xi, a_n, nodes), StyleString)"
+    "        pl.plot(x(k,xi,N), qt(k, xi, a_n, nodes), StyleString)"
    ]
   },
   {
@@ -440,17 +429,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 13,
    "id": "f80f8912",
    "metadata": {},
    "outputs": [],
    "source": [
-    "#set initial data\n",
-    "a_n = compute_ID_a(a_n, LegendreRoots)\n",
+    "def compute_dt(CFL, N):\n",
+    "    return CFL*dx(N)\n",
     "\n",
-    "#evolve the system forward TS timesteps and store\n",
-    "#result in soln\n",
-    "sol = evolve_TS_steps(TS, a_n, a_np1, LegendreRoots)"
+    "#define wrapper around full solver\n",
+    "def solve_system(t_end, CFL, N, nodes):\n",
+    "    #compute dt\n",
+    "    dt = compute_dt(CFL, N)\n",
+    "    #compute number of timesteps, TS\n",
+    "    TS = int(t_end/dt) + 1\n",
+    "    \n",
+    "    #compute ID\n",
+    "    a_n = compute_ID_a(N, LegendreRoots)\n",
+    "    \n",
+    "    #solve the system and store results in SOL\n",
+    "    SOL = evolve_TS_steps(TS, dt, a_n, LegendreRoots)\n",
+    "    \n",
+    "    return SOL"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "ced0d2a9",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "t_end         = 1\n",
+    "CFL           = 0.001\n",
+    "N             = 7\n",
+    "order         = 7\n",
+    "LegendreRoots = roots_legendre(order)[0]\n",
+    "\n",
+    "\n",
+    "sol = solve_system(t_end, CFL, N, LegendreRoots)"
    ]
   },
   {
@@ -463,7 +480,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 21,
    "id": "c9a77ab3",
    "metadata": {},
    "outputs": [],
@@ -485,19 +502,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 22,
    "id": "46cdc1a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b12be37d31a344efafec1e560453236a",
+       "model_id": "26fa046354994646a477f54cb2785da6",
        "version_major": 2,
        "version_minor": 0
       },
       "text/plain": [
-       "interactive(children=(IntSlider(value=0, description='timestep', max=250), Output()), _dom_classes=('widget-in…"
+       "interactive(children=(IntSlider(value=0, description='timestep', max=7001), Output()), _dom_classes=('widget-i…"
       ]
      },
      "metadata": {},
@@ -510,18 +527,22 @@
     "#the widgets.interact_manual one below it; that one only\n",
     "#draws the plot when you hit \"Run Interact\"; see\n",
     "#https://ipython-books.github.io/33-mastering-widgets-in-the-jupyter-notebook/\n",
-    "@widgets.interact(timestep=(0, TS))\n",
+    "@widgets.interact(timestep=(0, np.shape(sol)[0]-1))\n",
     "#@widgets.interact_manual(timestep=(0, TS))\n",
     "\n",
     "def plot_slider(timestep=0):\n",
     "    \n",
     "    #plot numerical solution   \n",
     "    coeffMatrix = sol[timestep]\n",
-    "    plot_soln(coeffMatrix, LegendreRoots)\n",
+    "    \n",
+    "    #define N = number of elements\n",
+    "    N = np.shape(sol)[1]\n",
+    "    \n",
+    "    plot_soln(N, coeffMatrix, LegendreRoots)\n",
     "    \n",
     "    #plot analytic solution\n",
-    "    xx = np.linspace(xMin, xMax, 100)\n",
-    "    pl.plot(xx, q_analytic(timestep*dt, xx), 'k:')\n",
+    "    xx = np.linspace(0, 1, 100)\n",
+    "    pl.plot(xx, q_analytic(timestep*compute_dt(CFL, N), xx), 'k:')\n",
     "    \n",
     "    #decorate plot\n",
     "    pl.xlabel('$x$')\n",
