--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -711,6 +711,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#define the timestep size given the CFL number\n",
+    "#and the spatial grid spacing dx\n",
     "def dt(CFL, N):\n",
     "    return CFL*dx(N)\n",
     "\n",
@@ -737,6 +739,7 @@
     "t_end = 1\n",
     "CFL   = 0.01\n",
     "N     = 24\n",
+    "\n",
     "sol = solve_system(t_end, CFL, N)"
    ]
   },
