--- a/DG_tutorial_p2.ipynb
+++ b/DG_tutorial_p2.ipynb
@@ -424,16 +424,17 @@
    "id": "45ef9d8f",
    "metadata": {},
    "source": [
-    "In the cell below we specify initial data and compute the corresponding coefficient matrix a_n, then evolve the system forward through time TS steps."
+    "In the cell below we define a helper function to compute the timestep size $\\Delta t$ given the CFL number and the grid spacing $\\Delta x$, and then define the function `solve_system()` which sets the initial data and performs the evolution, returning the solution in an array called `SOL`."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "id": "f80f8912",
    "metadata": {},
    "outputs": [],
    "source": [
+    "#compute the timestep size\n",
     "def compute_dt(CFL, N):\n",
     "    return CFL*dx(N)\n",
     "\n",
@@ -460,11 +461,17 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#set the simulation parameters\n",
     "t_end         = 1\n",
     "CFL           = 0.001\n",
     "N             = 7\n",
     "order         = 7\n",
     "LegendreRoots = roots_legendre(order)[0]\n",
+    "\n",
+    "#we can also try equally spaced collocation points;\n",
+    "#replace LegendreRoots with equispacedPts in the\n",
+    "#call to solve_system() below to do so\n",
+    "equispacedPts = np.linspace(-1, 1, order)\n",
     "\n",
     "\n",
     "sol = solve_system(t_end, CFL, N, LegendreRoots)"
