--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -830,7 +830,7 @@
    "id": "c42bd368",
    "metadata": {},
    "source": [
-    "It turns out that we need $N \\sim 75$ elements to get a decent solution."
+    "Feel free to play with the parameters `t_end`, `CFL`, and `N` to see how they impact the solution."
    ]
   },
   {
