fixed a bug in DG_tutorial_p2

--- a/DG_tutorial_p2.ipynb
+++ b/DG_tutorial_p2.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "b63fb5eb",
    "metadata": {},
    "outputs": [],
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "id": "ec7c16cf",
    "metadata": {},
    "outputs": [
@@ -170,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "id": "2e4fce93",
    "metadata": {},
    "outputs": [],
@@ -189,7 +189,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "id": "3d8ff9c0",
    "metadata": {},
    "outputs": [],
@@ -368,7 +368,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "id": "d2146aaf",
    "metadata": {},
    "outputs": [],
@@ -404,7 +404,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "id": "b67aeb44",
    "metadata": {},
    "outputs": [],
@@ -429,7 +429,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "id": "f80f8912",
    "metadata": {},
    "outputs": [],
@@ -446,17 +446,17 @@
     "    TS = int(t_end/dt) + 1\n",
     "    \n",
     "    #compute ID\n",
-    "    a_n = compute_ID_a(N, LegendreRoots)\n",
+    "    a_n = compute_ID_a(N, nodes)\n",
     "    \n",
     "    #solve the system and store results in SOL\n",
-    "    SOL = evolve_TS_steps(TS, dt, a_n, LegendreRoots)\n",
+    "    SOL = evolve_TS_steps(TS, dt, a_n, nodes)\n",
     "    \n",
     "    return SOL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 13,
    "id": "ced0d2a9",
    "metadata": {},
    "outputs": [],
@@ -487,7 +487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 14,
    "id": "c9a77ab3",
    "metadata": {},
    "outputs": [],
@@ -509,14 +509,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "id": "46cdc1a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "26fa046354994646a477f54cb2785da6",
+       "model_id": "d235985693fe4b7cb452d1222fbe6c9b",
        "version_major": 2,
        "version_minor": 0
       },
