added my name to the two jupyter notebooks

--- a/DG_tutorial_p2.ipynb
+++ b/DG_tutorial_p2.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "# DG tutorial Part 2: going to higher order\n",
     "\n",
+    "**Alex Pandya**\n",
+    "\n",
+    "alex.pandya@cornell.edu\n",
+    "\n",
     "### Sources:\n",
     "\n",
     "[1] \"An Introduction to Discontinuous Galerkin Methods\", by Josh Bevan (https://github.com/userjjb/22_6xx-DG-for-PDEs/tree/master)\n",
