--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -7,6 +7,10 @@
    "source": [
     "# DG Tutorial Part 1: the simplest possible case\n",
     "\n",
+    "**Alex Pandya**\n",
+    "\n",
+    "alex.pandya@cornell.edu\n",
+    "\n",
     "### Sources:\n",
     "\n",
     "[1] \"An Introduction to Discontinuous Galerkin Methods\", by Josh Bevan (https://github.com/userjjb/22_6xx-DG-for-PDEs/tree/master)\n",
