made a tiny edit

--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -48,7 +48,7 @@
     "$$\n",
     "\\begin{equation} \\tag{1}\n",
     "\\begin{aligned} \n",
-    "0 &= \\frac{\\partial}{\\partial t} q + \\frac{\\partial}{\\partial x} f(q) \\\\\n",
+    "\\frac{\\partial}{\\partial t} q + \\frac{\\partial}{\\partial x} f(q) &= 0 \\\\\n",
     "f(q) &= c q \\\\\n",
     "\\end{aligned}\n",
     "\\end{equation}\n",
