fixed a couple typos

--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -147,7 +147,7 @@
     "0 &= \\int_{x_L}^{x_R} \\psi_j \\, \\frac{\\partial \\tilde{q}}{\\partial t} \\, dx + \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} - \\int_{x_L}^{x_R} f(\\tilde{q}) \\, \\frac{\\partial \\psi_j}{\\partial x} \\, dx \\\\\n",
     "&= \\sum_{i=0}^{M} \\frac{\\partial a_i}{\\partial t} \\int_{x_L}^{x_R} \\psi_i \\, \\psi_j \\, dx + \\big[ f(\\tilde{q}) \\, \\psi_j \\big]^{x_R}_{x_L} - c \\sum_{i=0}^{M} a_i \\int_{x_L}^{x_R} \\psi_i \\, \\frac{\\partial \\psi_j}{\\partial x} \\, dx \\\\\n",
     "&= \\sum_{i=0}^{M} \\frac{\\partial a_i}{\\partial t} M_{ij} + F_j - c \\sum_{i=0}^{M} a_i K_{ij} \\\\\n",
-    "&= \\frac{\\partial \\mathbf{a}_i}{\\partial t} \\cdot \\mathbf{M} + \\mathbf{F} - c \\, \\mathbf{a}_i \\cdot \\mathbf{K}, \\\\\n",
+    "&= \\frac{\\partial \\mathbf{a}}{\\partial t} \\cdot \\mathbf{M} + \\mathbf{F} - c \\, \\mathbf{a} \\cdot \\mathbf{K}, \\\\\n",
     "\\end{aligned}\n",
     "\\end{equation}\n",
     "$$\n",
@@ -156,7 +156,7 @@
     "\n",
     "$$\n",
     "\\begin{equation} \\tag{3}\n",
-    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( c \\, \\mathbf{a}_i \\cdot \\mathbf{K} - \\mathbf{F} \\Big),\n",
+    "\\frac{\\partial \\mathbf{a}}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( c \\, \\mathbf{a} \\cdot \\mathbf{K} - \\mathbf{F} \\Big),\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
@@ -164,14 +164,14 @@
     "\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "M_{ij} &\\equiv \\int_{x_L}^{x_R} \\psi_i\\big[ x(\\xi) \\big] \\, \\psi_j \\big[ x(\\xi) \\big] \\, dx \\\\\n",
+    "M_{ij} &\\equiv \\int_{x_L}^{x_R} \\psi_i\\big[ \\xi(x) \\big] \\, \\psi_j \\big[ \\xi(x) \\big] \\, dx \\\\\n",
     "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\psi_j(\\xi) \\, J \\, d\\xi \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "where $J \\equiv \\frac{\\partial x}{\\partial \\xi}$ is the jacobian of the coordinate transformation from $x$ to $\\xi$.  Similarly, the _stiffness matrix_ is\n",
     "$$\n",
     "\\begin{aligned}\n",
-    "K_{ij} &\\equiv \\int_{x_L}^{x_R} \\psi_i\\big[ x(\\xi) \\big] \\, \\frac{\\partial \\psi_j\\big[ x(\\xi) \\big]}{\\partial x} \\, dx \\\\\n",
+    "K_{ij} &\\equiv \\int_{x_L}^{x_R} \\psi_i\\big[ \\xi(x) \\big] \\, \\frac{\\partial \\psi_j\\big[ \\xi(x) \\big]}{\\partial x} \\, dx \\\\\n",
     "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\frac{\\partial \\xi}{\\partial x} \\, \\frac{\\partial x}{\\partial \\xi} \\, dx \\\\\n",
     "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\, dx \\\\\n",
     "\\end{aligned}\n",
