--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -368,7 +368,7 @@
    "source": [
     "## Computing the terms in (3)\n",
     "\n",
-    "Given the grid, coordinate map $x(\\xi)$, the jacobian, the basis functions $\\phi_j$, and their derivatives, we can compute the mass and stiffness matrices.  \n",
+    "Given the grid, coordinate map $x(\\xi)$, the jacobian, the basis functions $\\psi_j$, and their derivatives, we can compute the mass and stiffness matrices.  \n",
     "\n",
     "Starting with the mass matrix, we find:\n",
     "\n",
