--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -525,7 +525,7 @@
     "\n",
     "$$\n",
     "\\begin{equation} \\tag{3}\n",
-    "\\frac{\\partial \\mathbf{a}_i}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( c \\, \\mathbf{a}_i \\cdot \\mathbf{K} - \\mathbf{F} \\Big),\n",
+    "\\frac{\\partial \\mathbf{a}}{\\partial t} = \\mathbf{M}^{-1} \\cdot \\Big( c \\, \\mathbf{a} \\cdot \\mathbf{K} - \\mathbf{F} \\Big),\n",
     "\\end{equation}\n",
     "$$\n",
     "\n",
