put in a missing link into the second notebook

--- a/DG_tutorial_p2.ipynb
+++ b/DG_tutorial_p2.ipynb
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "id": "b63fb5eb",
    "metadata": {},
    "outputs": [],
@@ -88,7 +88,7 @@
     "\n",
     "Before, we chose for our basis functions the set of monomial functions $\\psi_j(\\xi) \\sim \\xi^j$ and we only used a total of two basis functions to construct our solution.\n",
     "\n",
-    "It turns out that the monomial basis is a poor choice for constructing a DG scheme, as the mass matrix is ill-conditioned (see [link]).\n",
+    "It turns out that the monomial basis is a poor choice for constructing a DG scheme, as the mass matrix is ill-conditioned (see [1]).\n",
     "\n",
     "Instead, we will for our basis the first $M+1$ _Lagrange polynomials_\n",
     "$$\n",
