renamed variables for clarity

--- a/DG_tutorial_p2.ipynb
+++ b/DG_tutorial_p2.ipynb
@@ -191,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "3d8ff9c0",
    "metadata": {},
    "outputs": [],
@@ -370,7 +370,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "id": "d2146aaf",
    "metadata": {},
    "outputs": [],
@@ -406,7 +406,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "id": "b67aeb44",
    "metadata": {},
    "outputs": [],
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "id": "f80f8912",
    "metadata": {},
    "outputs": [],
@@ -458,7 +458,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 9,
    "id": "ced0d2a9",
    "metadata": {},
    "outputs": [],
@@ -466,17 +466,17 @@
     "#set the simulation parameters\n",
     "t_end         = 1\n",
     "CFL           = 0.001\n",
-    "N             = 7\n",
-    "order         = 7\n",
-    "LegendreRoots = roots_legendre(order)[0]\n",
+    "num_elements  = 7\n",
+    "element_order = 7\n",
+    "LegendreRoots = roots_legendre(element_order)[0]\n",
     "\n",
     "#we can also try equally spaced collocation points;\n",
     "#replace LegendreRoots with equispacedPts in the\n",
     "#call to solve_system() below to do so\n",
-    "equispacedPts = np.linspace(-1, 1, order)\n",
+    "equispacedPts = np.linspace(-1, 1, element_order)\n",
     "\n",
     "\n",
-    "sol = solve_system(t_end, CFL, N, LegendreRoots)"
+    "sol = solve_system(t_end, CFL, num_elements, LegendreRoots)"
    ]
   },
   {
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 10,
    "id": "c9a77ab3",
    "metadata": {},
    "outputs": [],
@@ -511,14 +511,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 11,
    "id": "46cdc1a6",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "520951b9c7ea41ee86be7b981b9decd9",
+       "model_id": "c4819a09c480470880ad0a7e2a6a8369",
        "version_major": 2,
        "version_minor": 0
       },
