fixed two bugs in the computation of the stiffness matrix

--- a/DG_tutorial_p1.ipynb
+++ b/DG_tutorial_p1.ipynb
@@ -172,8 +172,8 @@
     "$$\n",
     "\\begin{aligned}\n",
     "K_{ij} &\\equiv \\int_{x_L}^{x_R} \\psi_i\\big[ \\xi(x) \\big] \\, \\frac{\\partial \\psi_j\\big[ \\xi(x) \\big]}{\\partial x} \\, dx \\\\\n",
-    "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\frac{\\partial \\xi}{\\partial x} \\, \\frac{\\partial x}{\\partial \\xi} \\, dx \\\\\n",
-    "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\, dx \\\\\n",
+    "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\frac{\\partial \\xi}{\\partial x} \\, \\frac{\\partial x}{\\partial \\xi} \\, d\\xi \\\\\n",
+    "&= \\int_{\\xi(x_L)}^{\\xi(x_R)} \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\, d\\xi \\\\\n",
     "\\end{aligned}\n",
     "$$\n",
     "where the factor of the jacobian has cancelled with the factor of the inverse jacobian brought in by the spatial derivative term. Finally the flux term is\n",
@@ -235,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "ec7c16cf",
    "metadata": {},
    "outputs": [],
@@ -290,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 3,
    "id": "41c8e762",
    "metadata": {},
    "outputs": [],
@@ -326,7 +326,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 4,
    "id": "51336776",
    "metadata": {},
    "outputs": [],
@@ -391,8 +391,8 @@
     "&= \\int_0^1 \\psi_i(\\xi) \\, \\frac{\\partial \\psi_j(\\xi)}{\\partial \\xi} \\, d\\xi \\\\\n",
     "\\implies \\mathbf{K} &= \\frac{1}{2}\n",
     "\\begin{pmatrix}\n",
-    "-1 & 1 \\\\\n",
-    "-1 & 1\n",
+    "-1 & -1 \\\\\n",
+    "1 & 1\n",
     "\\end{pmatrix}\n",
     "\\end{aligned}.\n",
     "$$\n",
@@ -418,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 5,
    "id": "ee599630-584e-4f41-92a9-efd56a37c5f0",
    "metadata": {},
    "outputs": [],
@@ -464,7 +464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 6,
    "id": "13449a79",
    "metadata": {},
    "outputs": [
@@ -482,8 +482,8 @@
       "\n",
       "\n",
       "expected stiffness matrix:\n",
-      "[[-0.5  0.5]\n",
-      " [-0.5  0.5]]\n",
+      "[[-0.5 -0.5]\n",
+      " [ 0.5  0.5]]\n",
       "\n",
       "computed stiffness matrix:\n",
       "[[-0.5 -0.5]\n",
@@ -504,7 +504,7 @@
     "print(np.matrix(Mij(Ntemp)))\n",
     "print('\\n')\n",
     "\n",
-    "expectedStiffnessMatrix = 0.5*np.array([[-1, 1],[-1, 1]])\n",
+    "expectedStiffnessMatrix = 0.5*np.array([[-1, -1],[1, 1]])\n",
     "print('expected stiffness matrix:')\n",
     "print(np.array(expectedStiffnessMatrix))\n",
     "print()\n",
